# BLE_S

./: README.md  flash_stlink.sh  setup_fw_build.sh
ble_tool_nrf52_fw/: CMakeLists.txt  prj.conf
ble_tool_nrf52_fw/src/: main.c
ble_tool_nrf_periferal/: CMakeLists.txt  get_lispbm.sh
ble_tool_nrf_peripheral/: prj.conf
ble_tool_nrf_peripheral/src/: main.c
peripheral/: prj.conf
peripheral/src/: main.c
qscanner/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  qscanner.pro
scanner/: Makefile  main.c
